[package]
name = "provision"
version = "0.0.1"
authors = ["Bevan Hunt <bevan@bevanhunt.com>"]
edition = "2018"
license = "MIT"
keywords = ["upcloud", "ec2", "provision", "web-service", "api"]
description = "UpCloud Provision Web Service"
repository = "https://github.com/apibillme/provision"
readme = "README.md"

[dependencies]
