[package]
name = "provisioner"
version = "0.0.1"
authors = ["Bevan Hunt <bevan@bevanhunt.com>"]
edition = "2018"
license = "MIT"
keywords = ["upcloud", "ec2", "provision", "command-line", "cli"]
description = "Provision CLI"
repository = "https://github.com/apibillme/provisioner"
readme = "README.md"

[dependencies]
